--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -167,7 +167,7 @@ layout: compress
     </header>
 
     <main>
-      <img src="/assets/images/profile.jpg" alt="Dr. Farrukh Aziz" class="profile-pic" />
+      <img src="https://avatars.githubusercontent.com/u/225464808?s=400&u=ae925ec37e6c6d11e9ad1cd4f2fc32cf90d4c041&v=4" alt="Dr. Farrukh Aziz" class="profile-pic" />
 
       <h1>Dr. Farrukh Aziz</h1>
       <h2>PhD Researcher | AI, Behavioral Science & Management Specialist</h2>
