--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -170,7 +170,7 @@ layout: compress
       <img src="https://avatars.githubusercontent.com/u/225464808?s=400&u=ae925ec37e6c6d11e9ad1cd4f2fc32cf90d4c041&v=4" alt="Dr. Farrukh Aziz" class="profile-pic" />
 
       <h1>Dr. Farrukh Aziz</h1>
-      <h2>PhD Researcher | AI, Behavioral Science & Management Specialist</h2>
+      <h2>PhD Researcher | AI, Behavioral Science & Eng.Management Specialist</h2>
 
       <p class="intro">
         Welcome! I am a dedicated researcher at Dalian University of Technology, China, focusing on pioneering interdisciplinary studies where artificial intelligence meets organizational behavior and strategic management.<br /><br />
