--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -143,44 +143,51 @@ layout: compress
         color: #222;
       }
       /* New styles for supervisors and collaborators */
-      .section-heading {
-        background-color: #007acc;
-        color: white;
-        font-weight: 700;
-        font-size: 1.5rem;
-        padding: 0.6rem 1rem;
-        border-radius: 8px;
-        margin: 3rem 0 1.5rem;
-        text-align: left;
-        max-width: 700px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-      .person-info {
-        max-width: 700px;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: left;
-        font-size: 1rem;
-        line-height: 1.4;
-        color: #222;
-        padding: 0 1rem;
-      }
-      .person-info a {
-        color: #007acc;
-        text-decoration: none;
-        font-weight: 600;
-        margin-right: 1rem;
-      }
-      .person-info a:hover,
-      .person-info a:focus {
-        text-decoration: underline;
-        outline: none;
-      }
-      .person-name {
-        font-weight: 700;
-        margin-top: 0.6rem;
-      }
+     .section-heading {
+  background-color: #007acc;
+  color: white;
+  font-weight: 700;
+  font-size: 1.5rem;
+  padding: 0.6rem 1rem;
+  border-radius: 8px;
+  margin: 3rem 0 1.5rem;
+  text-align: left;
+  max-width: 1500px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.person-info {
+  max-width: 1500px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  font-size: 1rem;
+  line-height: 1.4;
+  color: #222;
+  padding: 0 1rem;
+}
+
+.person-info a {
+  color: #007acc;
+  text-decoration: none;
+  font-weight: 600;
+  margin-right: 1rem;
+}
+
+.person-info a:hover,
+.person-info a:focus {
+  text-decoration: underline;
+  outline: none;
+}
+
+.person-name {
+  font-weight: 700;
+  margin-top: 0.6rem;
+}
+
       @media (max-width: 480px) {
         h1 {
           font-size: 2rem;
