--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -143,50 +143,50 @@ layout: compress
         color: #222;
       }
       /* New styles for supervisors and collaborators */
-     .section-heading {
-  background-color: #007acc;
-  color: white;
-  font-weight: 700;
-  font-size: 1.5rem;
-  padding: 0.6rem 1rem;
-  border-radius: 8px;
-  margin: 3rem 0 1.5rem;
-  text-align: left;
-  max-width: 1500px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
+      .section-heading {
+        background-color: #007acc;
+        color: white;
+        font-weight: 700;
+        font-size: 1.5rem;
+        padding: 0.6rem 1rem;
+        border-radius: 8px;
+        margin: 3rem 0 1.5rem;
+        text-align: left;
+        max-width: 1500px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
-.person-info {
-  max-width: 1500px;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
-  font-size: 1rem;
-  line-height: 1.4;
-  color: #222;
-  padding: 0 1rem;
-}
+      .person-info {
+        max-width: 1500px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;
+        font-size: 1rem;
+        line-height: 1.4;
+        color: #222;
+        padding: 0 1rem;
+      }
 
-.person-info a {
-  color: #007acc;
-  text-decoration: none;
-  font-weight: 600;
-  margin-right: 1rem;
-}
+      .person-info a {
+        color: #007acc;
+        text-decoration: none;
+        font-weight: 600;
+        margin-right: 1rem;
+      }
 
-.person-info a:hover,
-.person-info a:focus {
-  text-decoration: underline;
-  outline: none;
-}
+      .person-info a:hover,
+      .person-info a:focus {
+        text-decoration: underline;
+        outline: none;
+      }
 
-.person-name {
-  font-weight: 700;
-  margin-top: 0.6rem;
-}
+      .person-name {
+        font-weight: 700;
+        margin-top: 0.6rem;
+      }
 
       @media (max-width: 480px) {
         h1 {
@@ -246,6 +246,7 @@ layout: compress
 
       <!-- Supervisors Section -->
       <div class="section-heading">Supervisors</div>
+
       <div class="person-info">
         <div class="person-name">Professor Jian-Jun Wang</div>
         <div>Dalian University Of Technology, China</div>
@@ -253,6 +254,16 @@ layout: compress
           <a href="https://scholar.google.com/citations?user=emCIT3sAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a>
           <a href="https://www.researchgate.net/profile/Jian-Jun-Wang-2" target="_blank" rel="noopener noreferrer">ResearchGate</a>
           <a href="https://faculty.dlut.edu.cn/leowang/en/index.htm" target="_blank" rel="noopener noreferrer">Faculty Page</a>
+        </div>
+      </div>
+
+      <div class="person-info">
+        <div class="person-name">Professor Shazia Nauman</div>
+        <div>Professor of Project Management, Professor at Riphah International University, Pakistan</div>
+        <div>
+          <a href="https://www.researchgate.net/profile/Shazia-Nauman-2" target="_blank" rel="noopener noreferrer">ResearchGate</a>
+          <a href="https://scholar.google.com/citations?user=PMGBQU8AAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a>
+          <a href="https://pk.linkedin.com/in/shaznaum" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </div>
       </div>
 
