--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -245,7 +245,7 @@ layout: compress
       </nav>
 
 <!-- Research Insights Heading -->
-      <div class="section-heading" style="max-width: 800px; margin: 3rem auto 1.5rem; text-align: center;">
+      <div class="section-heading" style="max-width: 1500px; width: 100%; margin: 3rem auto 1.5rem; text-align: center;">
   Research Insights
 </div>
 
