--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -265,6 +265,8 @@ layout: compress
           <div>
             <strong>Title:</strong> How Dark sides of leadership influence Employee Time theft through Work Place Time theft, Moderated by Ethical Organizational Culture<br />
             <strong>Project Type:</strong> Mixed method, multi-study study
+            <strong>Title:</strong> AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout<br />
+  <strong>Research Type:</strong> Sentiment Analysis
           </div>
         </div>
 
@@ -276,6 +278,9 @@ layout: compress
   </div>
   <div>
     2. Urban Green Infrastructure Enhancing Biodiversity and Climate Resilience in Smart Cities
+  </div>
+  <div>
+    3.  AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout: A Sentiment Analysis Study
   </div>
 </div>
       
@@ -324,7 +329,7 @@ layout: compress
     </main>
 
     <footer>
-       <span class="contact-email">Cell No.: +86-13190131946</span><br />
+       <span class="contact-email">Cell No.: +86-13190131946</span>
       <span class="contact-email">engrfarrukhaziz@mail.dlut.edu.cn</span>
       <a href="mailto:engrfarrukhaziz@mail.dlut.edu.cn" aria-label="Send email to Dr. Farrukh Aziz">
         📧 Email
