--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -265,6 +265,8 @@ layout: compress
           <div>
             <strong>Title:</strong> How Dark sides of leadership influence Employee Time theft through Work Place Time theft, Moderated by Ethical Organizational Culture<br />
             <strong>Project Type:</strong> Mixed method, multi-study study
+            <div>
+            <div>
             <strong>Title:</strong> AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout<br />
   <strong>Research Type:</strong> Sentiment Analysis
           </div>
