--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -263,11 +263,11 @@ layout: compress
 <div style="flex: 2 1 600px; background-color: #f9f9f9; border-radius: 12px; padding: 1.2rem 1.5rem; box-shadow: 0 4px 12px rgb(0 122 204 / 0.1); color: #222; font-weight: 500;">
   <div style="font-size: 1.2rem; color: #005f99; font-weight: 700; margin-bottom: 0.5rem;">Ongoing Research Projects</div>
   <div>
-    <strong>1 Title:</strong> How Dark sides of leadership influence Employee Time theft through Work Place Time theft, Moderated by Ethical Organizational Culture<br />
+    <strong>Title:</strong> How Dark sides of leadership influence Employee Time theft through Work Place Time theft, Moderated by Ethical Organizational Culture<br />
     <strong>Project Type:</strong> Mixed method, multi-study study
   </div>
   <div style="margin-top: 0.8rem;">
-    <strong>2 Title:</strong> AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout<br />
+    <strong>Title:</strong> AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout<br />
     <strong>Research Type:</strong> Sentiment Analysis
   </div>
 </div>
@@ -276,13 +276,16 @@ layout: compress
 <div style="flex: 2 1 600px; background-color: #f9f9f9; border-radius: 12px; padding: 1.2rem 1.5rem; box-shadow: 0 4px 12px rgb(0 122 204 / 0.1); color: #222; font-weight: 500;">
   <div style="font-size: 1.2rem; color: #005f99; font-weight: 700; margin-bottom: 0.5rem;">Ongoing Research Papers</div>
   <div>
-    The Dual Role of Ethical Organizational Culture in Moderating Despotic Leadership and Employee Time Theft: A Mixed-Methods Study Multi-wave study
+    1. The Dual Role of Ethical Organizational Culture in Moderating Despotic Leadership and Employee Time Theft: A Mixed-Methods Study Multi-wave study
   </div>
   <div style="margin-top: 0.8rem;">
-    Urban green infrastructure enhancing biodiversity and climate resilience in smart cities
+    2. Urban green infrastructure enhancing biodiversity and climate resilience in smart cities
   </div>
   <div style="margin-top: 0.8rem;">
-    AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout: A Sentiment Analysis Study
+    3. AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout: A Sentiment Analysis Study
+  </div>
+    <div style="margin-top: 0.8rem;">
+    4. AI-Automation and Future of Employment: Economic Consequences for Wages, Job Displacement and Workforce Transformation
   </div>
 </div>
 
