--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -312,6 +312,13 @@ layout: compress
           <a href="https://pk.linkedin.com/in/shaznaum" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </div>
       </div>
+         <div class="person-info">
+        <div class="person-name">Assitant Professor Naveed Anjum</div>
+        <div>Khwaja Fareed University of Engineering & Information Technology, Pakistan</div>
+        <div>
+          <a href="https://scholar.google.com.pk/citations?user=cEVvB-0AAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a>
+        </div>
+      </div>
 
       <!-- Collaborators Section -->
       <div class="section-heading">Collaborators</div>
